--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,24 @@
-altgraph==0.17.4
 asgiref==3.8.1
-babel==2.17.0
-beautifulsoup4==4.13.4
 certifi==2025.4.26
 cffi==1.17.1
 chardet==4.0.0
-comtypes==1.4.11
 cryptography==45.0.4
-customtkinter==5.2.2
-darkdetect==0.8.0
 dj-database-url==3.0.1
 Django==5.2.3
 django-parler==2.3
-docutils==0.21.2
-feedparser==6.0.11
-filetype==1.2.0
 gunicorn==23.0.0
 idna==2.10
-Jinja2==3.1.6
-Kivy==2.3.1
-Kivy-Garden==0.1.5
-kivy_deps.angle==0.4.0
-kivy_deps.glew==0.3.1
-kivy_deps.sdl2==0.8.0
-Markdown==3.8.2
 MarkupSafe==3.0.2
-MouseInfo==0.1.3
-numpy==2.3.0
 packaging==25.0
-pefile==2023.2.7
-pillow==11.3.0
+Pillow==11.3.0
 polib==1.2.0
 psutil==7.0.0
 psycopg2-binary==2.9.10
-py-cpuinfo==9.0.0
-PyAutoGUI==0.9.54
-pycparser==2.22
-PyGetWindow==0.0.9
-Pygments==2.19.1
-pyinstaller==6.14.1
-pyinstaller-hooks-contrib==2025.5
-PyMsgBox==1.0.9
-pyperclip==1.9.0
-pypiwin32==223
-PyQt6==6.9.1
-PyQt6-Qt6==6.9.1
-PyQt6_sip==13.10.2
-pyqtgraph==0.13.7
-PyRect==0.2.0
-PyScreeze==1.0.1
-PySide6==6.9.1
-PySide6_Addons==6.9.1
-PySide6_Essentials==6.9.1
-pyttsx3==2.98
-pytweening==1.2.0
-pywin32==310
-pywin32-ctypes==0.2.3
-qt-material==2.17
 requests==2.25.1
 setuptools==80.9.0
-sgmllib3k==1.0.0
-shiboken6==6.9.1
-soupsieve==2.7
-speedtest-cli==2.1.3
 sqlparse==0.5.3
 typing_extensions==4.14.0
 tzdata==2025.2
 urllib3==1.26.20
 watchdog==6.0.0
 whitenoise==6.9.0
-WMI==1.5.1
